<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.BSISJ7</groupId>
	<artifactId>TestCreator</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<javafx.version>21-ea+24</javafx.version>
		<javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
		<jpro.version>2023.3.1</jpro.version>
	</properties>

	<name>Test Creator</name>
	<url>https://www.jpro.one/</url>

	<pluginRepositories>
		<pluginRepository>
			<id>jpro - sandec repository</id>
			<url>https://sandec.jfrog.io/artifactory/repo</url>
		</pluginRepository>
	</pluginRepositories>

	<repositories>
		<repository>
			<id>Sandec</id>
			<name>Sandec Repository</name>
			<url>https://sandec.jfrog.io/artifactory/repo/</url>
		</repository>

		<repository>
			<id>mysql</id>
			<name>Sandec Repository</name>
			<url>https://sandec.jfrog.io/artifactory/repo/</url>
		</repository>
	</repositories>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.5</version>
	</parent>

	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>21-ea+24</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>21-ea+24</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.9</version>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.4.11</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>21-ea+24</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-swing</artifactId>
			<version>21-ea+24</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>21-ea+24</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-media</artifactId>
			<version>21-ea+24</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>21-ea+24</version>
		</dependency>

		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>8.2.0</version>
		</dependency>

		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>0.10.2</version>
		</dependency>

		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk-dynamodb</artifactId>
			<version>1.12.579</version>
		</dependency>

		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk-core</artifactId>
			<version>1.12.579</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>4.0.1</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.sandec.jpro</groupId>
			<artifactId>jpro-webapi</artifactId>
			<version>2023.3.0-M3</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>

			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>${javafx.maven.plugin.version}</version>
				<configuration>
					<mainClass>org.example.Javafx</mainClass>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>21</source>
					<target>21</target>
					<release>21</release>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.4.0</version>
			</plugin>

			<plugin>
				<groupId>one.jpro</groupId>
				<artifactId>jpro-maven-plugin</artifactId>
				<version>${jpro.version}</version>
				<configuration>
					<JVMArgs>
<!--						<JVMArg>&#45;&#45;enable-preview &#45;&#45;add-opens java.base/java.util=ALL-UNNAMED &#45;&#45;add-opens java.base/java.lang.reflect=ALL-UNNAMED &#45;&#45;add-opens java.base/java.text=ALL-UNNAMED &#45;&#45;add-opens java.desktop/java.awt.font=ALL-UNNAMED &#45;&#45;add-opens java.base/java.lang=ALL-UNNAMED</JVMArg>-->
					 	<JVMArg>--enable-preview</JVMArg>
					</JVMArgs>
					<mainClassName>TestCreator.Main</mainClassName>
					<openingPath>/</openingPath>
				</configuration>
			</plugin>
		</plugins>

		<resources>
			<resource>
				<directory>${project.basedir}/lib</directory>
			</resource>
			<resource>
				<directory>${project.basedir}/src/main/resources</directory>
			</resource>
		</resources>
	</build>
</project>


